VSE snaps strips incorrectly which leads to a fatal error #114542

Closed
opened 2023-11-06 16:40:48 +01:00 by Hjalti Hjálmarsson · 2 comments

System Information
Operating system: Linux-6.5.7-gentoo-x86_64-11th_Gen_Intel-R-_Core-TM-i9-11900K@_3.50GHz-with-glibc2.37 64 Bits, X11 UI
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01

Blender Version
Broken: version: 4.1.0 Alpha, caused by 3fccfe0bc6

Short description of error
If you move a strip on top of another one, it should snap to the left or right side. Instead it snaps above and in the console an error gets printed:
"WARN (seq.strip_transform): source/blender/sequencer/intern/strip_transform.cc:224 shuffle_seq_time_offset_get: Strip overlaps with itself or another strip, that is to be shuffled. This should never happen."

After a while it usually leads to Blender crashing, with the error message:
"Failed to initialize playblast file model. Invalid path. Check addon preferences"

Exact steps for others to reproduce the error

  • Create a new "Video Editing" blend file
  • Drag an image into the edit
  • Drag another image on top of the first image strip

...it will snap above the first image strip and the error message will show up in the console

**System Information** Operating system: Linux-6.5.7-gentoo-x86_64-11th_Gen_Intel-R-_Core-TM-_i9-11900K_@_3.50GHz-with-glibc2.37 64 Bits, X11 UI Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01 **Blender Version** Broken: version: 4.1.0 Alpha, caused by 3fccfe0bc6 **Short description of error** If you move a strip on top of another one, it should snap to the left or right side. Instead it snaps above and in the console an error gets printed: _"WARN (seq.strip_transform): source/blender/sequencer/intern/strip_transform.cc:224 shuffle_seq_time_offset_get: Strip overlaps with itself or another strip, that is to be shuffled. This should never happen."_ After a while it usually leads to Blender crashing, with the error message: _"Failed to initialize playblast file model. Invalid path. Check addon preferences"_ **Exact steps for others to reproduce the error** - Create a new "Video Editing" blend file - Drag an image into the edit - Drag another image on top of the first image strip ...it will snap above the first image strip and the error message will show up in the console
Hjalti Hjálmarsson added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-06 16:40:49 +01:00
Francesco Siddi added the
Interest
Video Sequencer
label 2023-11-06 16:43:26 +01:00

I can confirm.
Regression in 4.1
Caused by 3fccfe0bc6
@iss ^

I can confirm. Regression in 4.1 Caused by 3fccfe0bc6 @iss ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-07 05:07:03 +01:00

After a while it usually leads to Blender crashing, with the error message:
"Failed to initialize playblast file model. Invalid path. Check addon preferences"

I don't think that this is caused by this reported issue though.

> After a while it usually leads to Blender crashing, with the error message: > "Failed to initialize playblast file model. Invalid path. Check addon preferences" I don't think that this is caused by this reported issue though.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114542
No description provided.