Fix #114542: VSE overlap not handled correctly

Caused bu mistake in refactoring - tested `seq` instead of `seq_other`.